# django_bootstrap_template

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
core/templates/core/: base.html
django_project_name/: asgi.py  settings.py  urls.py  wsgi.py
django_project_name/settings/: base_settings.py  postgres_settings.py
pages/: urls.py
pages/static/css/: home.css
pages/templates/pages/: home.html
