[tool.poetry]
name = "django_bootstrap_template"
version = "0.0.1"
description = "A sane template for development with Django and Bootstrap"
authors = ["Bradley Marques <bradleyrcmarques@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.0.4"
psycopg2 = "2.9.3"
django-bootstrap-v5 = "1.0.11"

[tool.poetry.dev-dependencies]
black = "22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
